Fix spacing in Footer

--- a/assets/stylesheets/layout/_page_footer.scss
+++ b/assets/stylesheets/layout/_page_footer.scss
@@ -18,6 +18,7 @@
   }
   
   .column {
+    margin: 0.25rem 0rem 0rem 0rem;
     width:20%;
     float:left;
   }
@@ -44,6 +45,7 @@
       float: right;
       font-family: $font-family-heading;
       font-size: 11px; 
+      margin: 1rem 0rem 0rem 0rem;
       outline: none;
       padding: 0.5rem 0.5rem 0.5rem 0.5rem;
       text-decoration: none; 
